deploy/k8s/discovery-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synth-discovery-external
  namespace: synth
spec:
  rules:
    - host: synth.zakharhome.org
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: synth-discovery
                port:
                  name: http
