deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synth
  namespace: synth
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: synth-synth-strip-prefix@kubernetescrd
spec:
  rules:
    - http:
        paths:
          - path: /synth
            pathType: Prefix
            backend:
              service:
                name: synth
                port:
                  name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synth-external
  namespace: synth
spec:
  rules:
    - host: synth.zakharhome.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: synth
                port:
                  name: http
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: synth-strip-prefix
  namespace: synth
spec:
  stripPrefix:
    prefixes:
      - /synth
